ocp/scenario-3/python_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-app
  namespace: scenario-3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-python-app
  template:
    metadata:
      labels:
        app: my-python-app
    spec:
      containers:
      - name: my-python-app
        image: image-registry.openshift-image-registry.svc:5000/scenario-3/python-app:latest
        ports:
        - containerPort: 8000
