ocp/scenario-3/grafana_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  namespace: scenario-3
  labels:
    app: my-grafana
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: my-grafana
  sessionAffinity: None
  type: ClusterIP
