ocp/scenario-3/grafana_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: grafana-route
  namespace: scenario-3
spec:
  to:
    kind: Service
    name: grafana-svc
    weight: 100
  port:
    targetPort: 3000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
