ocp/scenario-3/prometheus_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: prometheus-route
  namespace: scenario-3
spec:
  to:
    kind: Service
    name: prometheus-svc
    weight: 100
  port:
    targetPort: 9090
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
